add delete cartItem, add request types
